[package]
name = "lite_db"
version = "0.1.6"
edition = "2021"
authors = ["Peace <peacess@163.com>"]
description = "rust implement lite structure kv embedded database  --- lite db. lite fast kv db for mobile, client, wasm etc."
repository = "https://github.com/peacess/lite_db"
homepage = "https://github.com/peacess/lite_db"
keywords = ["lite", "fast", "nosql", "kv", "embedded"]
categories = ["database"]
license = "Apache-2.0"

[dependencies]
log = "0.4.27"
fs2 = "0.4.3"

bytes = "1.10.1"
prost = "0.13.5"
crc32fast = "1.4.2"
memmap2 = "0.9.5"
parking_lot = "0.12.3"
jammdb = "0.11.0"

[dev-dependencies]
function_name="0.3.0"

[lib]
name = "lite_db"
path = "src/lib.rs"
